# PromptLens

./: .cursorrules  .editorconfig  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  TODO.md  melos.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  desktop-windows.yml
.trae/rules/: project_rules.md
apps/desktop/tauri-app/: package.json
apps/desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/tauri-app/src-tauri/icons/: .gitignore  icon.icns
apps/desktop/tauri-app/src-tauri/src/: main.rs
apps/desktop/tauri-app/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/tauri-app/web/src/: App.tsx
apps/desktop/tauri-app/web/src/components/: Visualizers.tsx
apps/mobile/flutter-app/: pubspec.yaml
apps/mobile/flutter-app/lib/: main.dart
apps/web-client/: README.md  desktop.html  index.html  package.json  vite.config.ts  web.html
apps/web-client/public/: index.html
apps/web-client/src/: App.tsx  desktop.tsx  env.d.ts  globals.css  main.tsx  web.tsx
apps/web-client/src/entries/: DesktopApp.tsx  WebApp.tsx
apps/web-client/src/lib/: api.ts  utils.ts
core/asr/: Cargo.toml
core/asr/examples/: demo.rs
core/asr/src/: lib.rs
core/audio/: Cargo.toml
core/audio/examples/: demo.rs
core/audio/src/: lib.rs
core/capture/: Cargo.toml
core/capture/examples/: demo.rs
core/capture/src/: lib.rs
core/ocr/: Cargo.toml
core/ocr/examples/: demo.rs
core/ocr/src/: lib.rs
core/service/: Cargo.toml
core/service/src/: lib.rs  main.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  MVP_TODOLIST.md  PLATFORM_SELECTION.md  README.zh-CN.md  RELATED_PROJECTS.md
infra/ci/: README.md
infra/docker/: README.md
infra/scripts/: README.md
scripts/: build.sh  clean.sh  dev.sh  install.sh  status.sh  win-oneclick.bat  win-oneclick.ps1
shared/proto/: README.md  openapi.yaml
shared/ui-tokens/: README.md
tests/e2e/: README.md
tests/load/: README.md
