[package]
name = "pl-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
cpal = { workspace = true }
webrtc-vad = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }


