[package]
name = "pl-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
once_cell = "1"
bytes = { workspace = true }
image = { workspace = true }
webp = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
tower = { workspace = true }
screenshots = { workspace = true }


