[package]
name = "promptlens-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pl-service = { path = "../../../../core/service" }

[[bin]]
name = "promptlens-tauri"
path = "src/main.rs"


